<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Corre Por Tu Vida</string>
    <string name="dummy_button">Empty button</string>
    <string name="dummy_content">List Of plans</string>
    <string name="title_activity_training">TrainingActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- DetallePlanActivity -->
    <string name="title_activity_detalle_plan">DetallePlanActivity</string>
    <string name="label_fase">Fase</string>
    <string name="value_fase">1</string>
    <string name="title_training">Entrenamiento recreativo</string>
    <string name="label_distancia_recorrida">Distancia Recorrida</string>
    <string name="value_distancia_recorrida"></string>
    <string name="label_velocidad_alcanzar">Velocidad a alcanzar</string>
    <string name="value_velocidad_alcanzar">5 Km/h</string>
    <string name="label_cambio_velocidad">Cambio de velocidad</string>
    <string name="value_cambio_velocidad">OK</string>
    <string name="title_activity_running">RunningActivity</string>
	
    <!-- RunningActivity -->
    <string name="button_cancel">Parar</string>
    <string name="label_velocidad_actual">Velocidad Actual</string>
    <string name="value_velocidad_actual"></string>
    
	<!-- TrainingDetailActivity -->
	<string name="label_nombre_plan">Plan</string>
	<string name="label_nombre_entrenamiento">Entrenamiento</string>
	<string name="button_start">Comenzar Entrenamiento</string>
	
	
    
</resources>
