<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff6600"
    tools:context=".PlansListActivity" >

		<LinearLayout  
            android:id="@+id/fullscreen_content_controls2"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="0dp"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >
        	
		
		    <TextView android:id="@+id/labelNombrePlan"
			    	  android:layout_width="0dip"
			    	  android:layout_height="wrap_content"
	    			  android:layout_weight="1"
	    			  android:text="@string/label_nombre_plan"
	    			  android:gravity="center_horizontal"/>
	    			 
			<TextView android:id="@+id/valueNombrePlan"
				      android:layout_width="0dip"
				      android:layout_height="wrap_content"
				      android:layout_weight="1"
				      android:gravity="center_horizontal"/>
		
		</LinearLayout>
	
		<LinearLayout  
            android:id="@+id/fullscreen_content_controls3"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="17dp"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >
        	
		
	    <TextView android:id="@+id/labelNombreEntrenamiento"
		    	  android:layout_width="0dip"
		    	  android:layout_height="wrap_content"
    			  android:layout_weight="1"
    			  android:text="@string/label_nombre_entrenamiento"
    			  android:gravity="center_horizontal"/>
    			 
		<TextView android:id="@+id/valueNombreEntrenamiento"
			      android:layout_width="0dip"
			      android:layout_height="wrap_content"
			      android:layout_weight="1"
			      android:gravity="center_horizontal"/>
		
	</LinearLayout>
	
	<LinearLayout  
            android:id="@+id/fullscreen_content_controls4"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_button"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >
		
	    	<TextView 
				android:id="@+id/button_start"
				android:layout_width="0dip"
			    android:layout_height="35dp"
			    android:layout_weight="1"
			    android:height="5dp"
			    android:text="@string/button_start"
			    android:gravity="center_horizontal"	/>
	    
	</LinearLayout>
	
</FrameLayout>